Added transfer notebooks

--- a/notebooks/crawl_analysis.ipynb
+++ b/notebooks/crawl_analysis.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploratory Analysis of Deep Blue's Xtract Crawl"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,42 +19,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exploratory Analysis of Deep Blue Xtract Crawl"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load crawl CSV\n",
-    "\n",
     "deep_blue_crawl_df = pd.read_csv(\"data/deep_blue_xtract_crawl.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get compressed extensions\n",
+    "compressed_extensions = set(deep_blue_crawl_df[deep_blue_crawl_df.label == \"compressed\"].extension)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gz: \n",
-      "         size_bytes\n",
-      "count  3.300000e+01\n",
-      "mean   2.128045e+10\n",
-      "std    3.965044e+10\n",
-      "min    1.806800e+04\n",
-      "25%    3.972696e+07\n",
-      "50%    9.708754e+08\n",
-      "75%    1.050042e+10\n",
-      "max    1.167499e+11\n",
       "tar: \n",
       "         size_bytes\n",
       "count  1.600000e+01\n",
@@ -58,6 +57,16 @@
       "50%    1.001690e+09\n",
       "75%    1.453554e+09\n",
       "max    2.102018e+10\n",
+      "gz: \n",
+      "         size_bytes\n",
+      "count  3.300000e+01\n",
+      "mean   2.128045e+10\n",
+      "std    3.965044e+10\n",
+      "min    1.806800e+04\n",
+      "25%    3.972696e+07\n",
+      "50%    9.708754e+08\n",
+      "75%    1.050042e+10\n",
+      "max    1.167499e+11\n",
       "zip: \n",
       "         size_bytes\n",
       "count  8.240000e+02\n",
@@ -72,161 +81,6 @@
     }
    ],
    "source": [
-    "# Get compressed extensions\n",
-    "compressed_extensions = set(deep_blue_crawl_df[deep_blue_crawl_df.label == \"compressed\"].extension)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>full_path</th>\n",
-       "      <th>size_bytes</th>\n",
-       "      <th>extension</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>/UMich/download/DeepBlueData_05741r808/gitm_ro...</td>\n",
-       "      <td>3021</td>\n",
-       "      <td>py</td>\n",
-       "      <td>decompressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>/UMich/download/DeepBlueData_05741r808/readme.txt</td>\n",
-       "      <td>1051</td>\n",
-       "      <td>txt</td>\n",
-       "      <td>decompressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>/UMich/download/DeepBlueData_05741r808/run_msi...</td>\n",
-       "      <td>10500421443</td>\n",
-       "      <td>gz</td>\n",
-       "      <td>compressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>/UMich/download/DeepBlueData_05741r808/run_msi...</td>\n",
-       "      <td>116713949474</td>\n",
-       "      <td>gz</td>\n",
-       "      <td>compressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>/UMich/download/DeepBlueData_05741r808/run_msi...</td>\n",
-       "      <td>116749943494</td>\n",
-       "      <td>gz</td>\n",
-       "      <td>compressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4998</th>\n",
-       "      <td>/UMich/download/testing/DeepBlueData_mg74qm18n...</td>\n",
-       "      <td>345</td>\n",
-       "      <td>txt</td>\n",
-       "      <td>decompressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4999</th>\n",
-       "      <td>/UMich/download/testing/DeepBlueData_pn89d667r...</td>\n",
-       "      <td>257364384</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>compressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5000</th>\n",
-       "      <td>/UMich/download/testing/DeepBlueData_pn89d667r...</td>\n",
-       "      <td>3252</td>\n",
-       "      <td>txt</td>\n",
-       "      <td>decompressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5001</th>\n",
-       "      <td>/UMich/download/testing/DeepBlueData_pn89d667r...</td>\n",
-       "      <td>43202138</td>\n",
-       "      <td>zip</td>\n",
-       "      <td>compressed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5002</th>\n",
-       "      <td>/UMich/download/testing/DeepBlueData_pn89d667r...</td>\n",
-       "      <td>292</td>\n",
-       "      <td>txt</td>\n",
-       "      <td>decompressed</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5003 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              full_path    size_bytes  \\\n",
-       "0     /UMich/download/DeepBlueData_05741r808/gitm_ro...          3021   \n",
-       "1     /UMich/download/DeepBlueData_05741r808/readme.txt          1051   \n",
-       "2     /UMich/download/DeepBlueData_05741r808/run_msi...   10500421443   \n",
-       "3     /UMich/download/DeepBlueData_05741r808/run_msi...  116713949474   \n",
-       "4     /UMich/download/DeepBlueData_05741r808/run_msi...  116749943494   \n",
-       "...                                                 ...           ...   \n",
-       "4998  /UMich/download/testing/DeepBlueData_mg74qm18n...           345   \n",
-       "4999  /UMich/download/testing/DeepBlueData_pn89d667r...     257364384   \n",
-       "5000  /UMich/download/testing/DeepBlueData_pn89d667r...          3252   \n",
-       "5001  /UMich/download/testing/DeepBlueData_pn89d667r...      43202138   \n",
-       "5002  /UMich/download/testing/DeepBlueData_pn89d667r...           292   \n",
-       "\n",
-       "     extension         label  \n",
-       "0           py  decompressed  \n",
-       "1          txt  decompressed  \n",
-       "2           gz    compressed  \n",
-       "3           gz    compressed  \n",
-       "4           gz    compressed  \n",
-       "...        ...           ...  \n",
-       "4998       txt  decompressed  \n",
-       "4999       zip    compressed  \n",
-       "5000       txt  decompressed  \n",
-       "5001       zip    compressed  \n",
-       "5002       txt  decompressed  \n",
-       "\n",
-       "[5003 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "# Get data on file size of each extension\n",
     "for extension in compressed_extensions:\n",
     "    print(f\"{extension}: \")\n",
@@ -235,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbb4d6ee290>"
+       "<matplotlib.legend.Legend at 0x7ffee3928c90>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -270,6 +124,7 @@
     "# Create bins in logspace\n",
     "bins = np.logspace(0,np.log10(max(deep_blue_crawl_df[deep_blue_crawl_df.label == \"compressed\"].size_bytes.values)), 10)\n",
     "\n",
+    "# Plot the data\n",
     "plt.hist([gz_data, tar_data, zip_data], label=[\"gz\", \"tar\", \"zip\"], bins=bins)\n",
     "plt.yscale(\"log\")\n",
     "plt.xscale(\"log\")\n",
@@ -277,66 +132,6 @@
     "plt.ylabel(\"Number of files\")\n",
     "plt.legend(loc=\"upper right\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['/UMich/download/DeepBlueData_05741r808/run_msis_Jan_2010_USR_files_data.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_05741r808/run_msis_Jan_2010_data.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_05741r808/run_msis_June_2010_data.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_05741r808/run_waccm_Jan_2010_USR_files_data.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_05741r808/run_waccm_Jan_2010_data.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_05741r808/run_waccm_June_2010_data.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_05741r808/waccm_lower_boundary_files_data.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_1c18dg64h/candidate_stability_project.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_1c18dg64h/candidate_stability_workspace.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_1c18dg64h/rigid_protein_project.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_1c18dg64h/rigid_protein_workspace.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_3t945q88k/UmichIndoorCorridor2012.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_79407x76d/fig01.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_79407x76d/fig03.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_79407x76d/fig04.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_79407x76d/fig05.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_79407x76d/fig06.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_79407x76d/fig07.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_79407x76d/mc_ssa_cal.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_79407x76d/microCT_data.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_br86b3812/erie_expt2.nc.gz',\n",
-       "       '/UMich/download/DeepBlueData_br86b3812/mhs_expt2.nc.gz',\n",
-       "       '/UMich/download/DeepBlueData_br86b3812/ontario_expt2.nc.gz',\n",
-       "       '/UMich/download/DeepBlueData_br86b3812/sup_expt2.nc.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_10k_annotations.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_10k_images.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_10k_segmentations.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_200k_annotations.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_200k_images.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_200k_segmentations.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_50k_annotations.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_50k_images.tar.gz',\n",
-       "       '/UMich/download/DeepBlueData_pv63g053w/repro_50k_segmentations.tar.gz'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "deep_blue_crawl_df[deep_blue_crawl_df.extension == \"gz\"].full_path.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
