--- a/notebooks/globus_transfer_notebook.ipynb
+++ b/notebooks/globus_transfer_notebook.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "id": "smaller-immigration",
    "metadata": {},
    "outputs": [
@@ -115,8 +115,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "600 files to transfer\n",
-      "Total size: 15.0 GB\n"
+      "472 files to transfer\n",
+      "Total size: 5.0 GB\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
     "# Pick which files to transfer\n",
     "transfer_job_size = 0\n",
     "files_to_transfer = []\n",
-    "max_size_threshold = 15 * 10 ** 9 # Just to make sure we don't blow up the Jetstream instance\n",
+    "max_size_threshold = 5 * 10 ** 9 # Just to make sure we don't blow up the Jetstream instance\n",
     "\n",
     "for index, row in filtered_files.iterrows():\n",
     "    file_path = row[0]\n",
@@ -152,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "domestic-magazine",
+   "execution_count": 81,
+   "id": "agreed-financing",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task ID: e1626516-6057-11eb-a4f0-0a53a3613b81\n"
+      "Task ID: 7260dd4a-6058-11eb-87c8-02187389bd35\n"
      ]
     }
    ],
@@ -184,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "prescribed-island",
+   "execution_count": null,
+   "id": "maritime-tiger",
    "metadata": {},
    "outputs": [
     {
@@ -206,40 +206,7 @@
       "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
       "_________\n",
       "Status: ACTIVE\n",
-      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 9733202241, Files transferred: 123, Transfer rate: 152533243\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 9733202241, Files transferred: 123, Transfer rate: 131767188\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 9733202241, Files transferred: 123, Transfer rate: 114028761\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 9733202241, Files transferred: 123, Transfer rate: 102014243\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 9733202241, Files transferred: 123, Transfer rate: 92268647\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 9733202241, Files transferred: 123, Transfer rate: 84238126\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 14467117033, Files transferred: 391, Transfer rate: 114968067\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 14467117033, Files transferred: 391, Transfer rate: 106461742\n",
-      "_________\n",
-      "Status: ACTIVE\n",
-      "Bytes transferred: 14467117033, Files transferred: 391, Transfer rate: 99130053\n"
+      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n"
      ]
     }
    ],
@@ -264,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exact-haven",
+   "id": "overhead-briefing",
    "metadata": {},
    "outputs": [],
    "source": []
