Added script to collect decompressed/compressed data

--- a/notebooks/crawl_analysis.ipynb
+++ b/notebooks/crawl_analysis.ipynb
@@ -132,6 +132,54 @@
     "plt.ylabel(\"Number of files\")\n",
     "plt.legend(loc=\"upper right\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "files = []\n",
+    "for file in deep_blue_crawl_df[deep_blue_crawl_df.label == \"compressed\"].full_path.values:\n",
+    "    files.append(os.path.basename(file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "skull.zip\n",
+      "whole-body.zip\n",
+      "Code.zip\n",
+      "skull.zip\n",
+      "whole-body.zip\n",
+      "Code.zip\n",
+      "full_body.zip\n",
+      "skull.zip\n",
+      "whole-body.zip\n",
+      "full_body.zip\n",
+      "skull.zip\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file in files:\n",
+    "    if files.count(file) > 1:\n",
+    "        print(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
