--- a/notebooks/globus_transfer_notebook.ipynb
+++ b/notebooks/globus_transfer_notebook.ipynb
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "agreed-financing",
+   "id": "danish-plaza",
    "metadata": {},
    "outputs": [
     {
@@ -184,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "maritime-tiger",
+   "execution_count": 82,
+   "id": "destroyed-keyboard",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,19 @@
       "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
       "_________\n",
       "Status: ACTIVE\n",
-      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n"
+      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
+      "_________\n",
+      "Status: ACTIVE\n",
+      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
+      "_________\n",
+      "Status: ACTIVE\n",
+      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
+      "_________\n",
+      "Status: ACTIVE\n",
+      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
+      "_________\n",
+      "Status: ACTIVE\n",
+      "Bytes transferred: 4794668658, Files transferred: 328, Transfer rate: 66807707\n"
      ]
     }
    ],
@@ -231,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "overhead-briefing",
+   "id": "integrated-laundry",
    "metadata": {},
    "outputs": [],
    "source": []
