Changes to transfer and experiment stuff

--- a/notebooks/globus_transfer_notebook.ipynb
+++ b/notebooks/globus_transfer_notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 84,
    "id": "imperial-hawaiian",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 88,
    "id": "cellular-player",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 89,
    "id": "rising-lingerie",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
      "text": [
       "Login Here:\n",
       "\n",
-      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=openid+profile+email+urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall&state=_default&response_type=code&code_challenge=TE5SlFNKymeksZB_2yQa4IY01fHki35WA0VuHIre-Gc&code_challenge_method=S256&access_type=online\n"
+      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=openid+profile+email+urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall&state=_default&response_type=code&code_challenge=pvTLOT7VgYiVB_hOctLw1HIBva5ZkGfPdSXmWCgAeSs&code_challenge_method=S256&access_type=online\n"
      ]
     }
    ],
@@ -67,13 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "id": "accredited-wisdom",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Authorization code\n",
-    "auth_code = \"Nymy6e4PlkZxPeDL3AjkODDh9eruQS\"\n",
+    "auth_code = \"7Hvqp3XpTCeDtbaF1zdTz8dBcbYpHQ\"\n",
     "\n",
     "# Create transfer client\n",
     "token_response = native_auth_client.oauth2_exchange_code_for_tokens(auth_code)\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "commercial-monaco",
    "metadata": {},
    "outputs": [],
@@ -100,14 +100,18 @@
     "# Import Deep Blue crawl data\n",
     "deep_blue_crawl_df = pd.read_csv(\"data/deep_blue_xtract_crawl.csv\")\n",
     "\n",
+    "# Create mapping of file to file UUID\n",
+    "file_uuid_mapping = dict()\n",
+    "for index, row in deep_blue_crawl_df.iterrows():\n",
+    "    file_uuid_mapping[row[0]] = row[4]\n",
+    "\n",
     "# Filter files\n",
-    "filtered_files = deep_blue_crawl_df[deep_blue_crawl_df.extension == \"zip\"].sort_values(by=[\"size_bytes\"])\n",
-    "print(filtered_files)"
+    "filtered_files = deep_blue_crawl_df[deep_blue_crawl_df.extension == \"zip\"].sort_values(by=[\"size_bytes\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 131,
    "id": "smaller-immigration",
    "metadata": {},
    "outputs": [
@@ -116,14 +120,15 @@
      "output_type": "stream",
      "text": [
       "472 files to transfer\n",
-      "Total size: 5.0 GB\n"
+      "Total size: 4.972882032 GB\n"
      ]
     }
    ],
    "source": [
     "# Load files already transferred\n",
+    "transferred_files_file = \"data/transferred_files.txt\"\n",
     "transferred_files = []\n",
-    "with open(\"data/transferred_files.txt\", \"r\") as f:\n",
+    "with open(transferred_files_file, \"r\") as f:\n",
     "    for line in f:\n",
     "        transferred_files.append(line.strip(\"\\n\"))\n",
     "\n",
@@ -136,31 +141,29 @@
     "    file_path = row[0]\n",
     "    file_size = row[1]\n",
     "    \n",
-    "    if file_path in transferred_files:\n",
+    "    if file_uuid_mapping[file_path] in transferred_files:\n",
     "        pass\n",
     "    elif transfer_job_size + file_size > max_size_threshold:\n",
     "        break\n",
     "    else:\n",
     "        files_to_transfer.append(file_path)\n",
     "        transfer_job_size += file_size\n",
-    "    \n",
-    "    \n",
     "\n",
     "print(f\"{len(files_to_transfer)} files to transfer\")\n",
-    "print(f\"Total size: {max_size_threshold / (10 ** 9)} GB\")"
+    "print(f\"Total size: {transfer_job_size / (10 ** 9)} GB\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "danish-plaza",
+   "execution_count": 134,
+   "id": "according-mattress",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task ID: 7260dd4a-6058-11eb-87c8-02187389bd35\n"
+      "Task ID: 8e09bbaa-60be-11eb-8c2f-0eb1aa8d4337\n"
      ]
     }
    ],
@@ -172,8 +175,9 @@
     "                                jetstream_endpoint,\n",
     "                                label=label)\n",
     "\n",
+    "# Transfer file to file UUID to avoid name collisions\n",
     "for file in files_to_transfer:\n",
-    "    tdata.add_item(file, f\"~/ryan/deep_blue_data/{os.path.basename(file)}\")\n",
+    "    tdata.add_item(file, f\"~/ryan/deep_blue_data/{os.path.basename(file_uuid_mapping[file])}\")\n",
     "\n",
     "transfer_client.endpoint_autoactivate(petrel_endpoint)\n",
     "transfer_client.endpoint_autoactivate(jetstream_endpoint)\n",
@@ -184,9 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "destroyed-keyboard",
-   "metadata": {},
+   "execution_count": 135,
+   "id": "material-pension",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,10 +221,10 @@
       "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
       "_________\n",
       "Status: ACTIVE\n",
-      "Bytes transferred: 0, Files transferred: 0, Transfer rate: 0\n",
+      "Bytes transferred: 4835255423, Files transferred: 344, Transfer rate: 75582445\n",
       "_________\n",
       "Status: ACTIVE\n",
-      "Bytes transferred: 4794668658, Files transferred: 328, Transfer rate: 66807707\n"
+      "Bytes transferred: 4835255423, Files transferred: 344, Transfer rate: 65280503\n"
      ]
     }
    ],
@@ -237,13 +243,13 @@
     "# Write files that were transferred\n",
     "with open(\"data/transferred_files.txt\", \"a\") as f:\n",
     "    for file in files_to_transfer:\n",
-    "        f.write(file + \"\\n\")"
+    "        f.write(file_uuid_mapping[file] + \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "integrated-laundry",
+   "id": "corrected-consumption",
    "metadata": {},
    "outputs": [],
    "source": []
