--- a/notebooks/crawl_analysis.ipynb
+++ b/notebooks/crawl_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,6 +172,27 @@
     "for file in files:\n",
     "    if files.count(file) > 1:\n",
     "        print(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['/UMich/download/DeepBlueData_nz805z76d/Observation_Data.tar'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deep_blue_crawl_df[deep_blue_crawl_df.extension == \"tar\"].loc[[4228]].full_path.values\n"
    ]
   },
   {
