Big refactor. Also started working on classes for predictors

--- a/notebooks/crawl_analysis.ipynb
+++ b/notebooks/crawl_analysis.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# Load crawl CSV\n",
-    "deep_blue_crawl_df = pd.read_csv(\"data/deep_blue_xtract_crawl.csv\")"
+    "deep_blue_crawl_df = pd.read_csv(\"../data/deep_blue_xtract_crawl.csv\")"
    ]
   },
   {
