--- a/notebooks/decompression_analysis.ipynb
+++ b/notebooks/decompression_analysis.ipynb
@@ -32,17 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 338,
    "id": "sought-latter",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import decompression size .csv\n",
-    "zip_results_df = pd.read_csv(\"data/zip_decompression_results.csv\")\n",
+    "zip_results_df = pd.read_csv(\"../data/zip_decompression_results.csv\")\n",
     "\n",
     "# Import decompressed files\n",
     "zip_decompressed_files = []\n",
-    "with open(\"data/zip_decompressed_files.txt\") as f:\n",
+    "with open(\"../data/zip_decompressed_files.txt\") as f:\n",
     "    for line in f:\n",
     "        zip_decompressed_files.append(line.rstrip(\"\\n\"))"
    ]
@@ -495,11 +495,11 @@
    "outputs": [],
    "source": [
     "# Import decompression size .csv\n",
-    "tar_results_df = pd.read_csv(\"data/tar_decompression_results.csv\")\n",
+    "tar_results_df = pd.read_csv(\"../data/tar_decompression_results.csv\")\n",
     "\n",
     "# Import decompressed files\n",
     "tar_decompressed_files = []\n",
-    "with open(\"data/tar_decompressed_files.txt\") as f:\n",
+    "with open(\"../data/tar_decompressed_files.txt\") as f:\n",
     "    for line in f:\n",
     "        tar_decompressed_files.append(line.rstrip(\"\\n\"))"
    ]
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 340,
    "id": "sorted-capacity",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,26 @@
      "output_type": "stream",
      "text": [
       "Best fit line: 3.352210013627208x + -1155513423.5977616\n",
-      "RMSE: [8.30224403e+08]\n"
+      "RMSE: [8.30224403e+08]\n",
+      "0      4907402374\n",
+      "1      1279795037\n",
+      "2      1253484610\n",
+      "3       768242428\n",
+      "4          131295\n",
+      "5        87334189\n",
+      "6      1274470605\n",
+      "7     68750890720\n",
+      "8      1253523071\n",
+      "9      1786905892\n",
+      "10      767722460\n",
+      "11         137784\n",
+      "12      828911633\n",
+      "13      909888371\n",
+      "14    68744243220\n",
+      "Name: decompressed_size, dtype: int64 [ 5.34719154e+09  2.20981534e+09  2.20499335e+09  2.77597361e+08\n",
+      " -1.15503285e+09 -8.56809950e+08  2.20897480e+09  6.85473815e+10\n",
+      "  2.19972789e+09  3.17374260e+09  2.76751120e+08 -1.15541585e+09\n",
+      "  2.96333373e+08  3.51159723e+08  6.86866738e+10]\n"
      ]
     }
    ],
@@ -588,13 +607,14 @@
     "plt.show()\n",
     "\n",
     "print(f\"Best fit line: {coef[0]}x + {coef[1]}\")\n",
-    "print(f\"RMSE: {np.sqrt(res/len(x1))}\")"
+    "print(f\"RMSE: {np.sqrt(res/len(x1))}\")\n",
+    "print(y1, poly_fn(x1))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 334,
-   "id": "brazilian-assets",
+   "id": "traditional-israeli",
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 337,
-   "id": "posted-exposure",
+   "id": "complicated-medicare",
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +1010,7 @@
    "outputs": [],
    "source": [
     "# Import decompression size .csv\n",
-    "gzip_results_df = pd.read_csv(\"data/gzip_decompression_results.csv\")"
+    "gzip_results_df = pd.read_csv(\"../data/gzip_decompression_results.csv\")"
    ]
   },
   {
@@ -1179,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incomplete-warner",
+   "id": "political-distribution",
    "metadata": {},
    "source": [
     "## Analysis Results\n",
