--- a/notebooks/globus_transfer_notebook.ipynb
+++ b/notebooks/globus_transfer_notebook.ipynb
@@ -98,7 +98,7 @@
    "outputs": [],
    "source": [
     "# Import Deep Blue crawl data\n",
-    "deep_blue_crawl_df = pd.read_csv(\"data/deep_blue_xtract_crawl.csv\")\n",
+    "deep_blue_crawl_df = pd.read_csv(\"../data/deep_blue_xtract_crawl.csv\")\n",
     "\n",
     "# Create mapping of file to file UUID\n",
     "file_uuid_mapping = dict()\n",
