Added functions for decompressing and polling funcx

--- a/notebooks/abyss_request_testing.ipynb
+++ b/notebooks/abyss_request_testing.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 72,
    "id": "fatty-fetish",
    "metadata": {},
    "outputs": [],
    "source": [
     "import globus_sdk\n",
     "from fair_research_login import NativeClient\n",
-    "import requests"
+    "import requests\n",
+    "import funcx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "id": "incident-crime",
    "metadata": {},
    "outputs": [
@@ -23,10 +24,10 @@
      "output_type": "stream",
      "text": [
       "Please paste the following URL in a browser:\n",
-      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=VDxPL7yh6oc1TFg9dXWfKVDJNy0aDgkpuYx0cwsoYq8&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
+      "https://auth.globus.org/v2/oauth2/authorize?client_id=7414f0b4-7d05-4bb6-bb00-076fa3f17cf5&redirect_uri=https%3A%2F%2Fauth.globus.org%2Fv2%2Fweb%2Fauth-code&scope=urn%3Aglobus%3Aauth%3Ascope%3Atransfer.api.globus.org%3Aall+https%3A%2F%2Fauth.globus.org%2Fscopes%2Ffacd7ccc-c5f4-42aa-916b-a0e270e2c2a9%2Fall+email+openid&state=_default&response_type=code&code_challenge=JB-Q9sACIVKJMuWY7tS1wT6gkoE0g3c-YMeEIHsCQWI&code_challenge_method=S256&access_type=online&prefill_named_grant=My+App+Login\n",
       "Please Paste your Auth Code Below: \n",
-      "vL1Anzm1HTjOLhUGQHY3aZLDoIfYVP\n",
-      "Headers: {'Authorization': 'Bearer Age3y9kq07VaV5wJ2EoyG5QKYGJdrQyqOnpbylB251bNy0PEr8IVC1n6zMYJ88ByvPqJqe5x865pbzfK2bd4pFlVo4', 'Transfer': 'AgVXGVEYKx2WN64NQqxJqq6Xbj7neX2r48BMMplEaekqyJ46OgSbCdz3a9rzwOB8bNNzgKwW1mOvKgSlVzgwWspD3o', 'FuncX': 'Age3y9kq07VaV5wJ2EoyG5QKYGJdrQyqOnpbylB251bNy0PEr8IVC1n6zMYJ88ByvPqJqe5x865pbzfK2bd4pFlVo4'}\n"
+      "dTmnmg2wzBIntHkNx4pvMLQrSxu19p\n",
+      "Headers: {'Authorization': 'Bearer AgVgyazW415vKE5gw6aoP2DpGgYv6MaYedjDm3lMeWDdYnxj7MubCNoOnN9DD6k7NQqbMD3G7kd9wDclVwemQhpDqQ', 'Transfer': 'AgNaM1MmqMO42VBdNroYVojP2XEyQMwDvWezM81z58WDz68kOvtgCGbGa51rxpQ4OwVJqVqxPPXaD4IjydBK7TM5e9', 'FuncX': 'AgVgyazW415vKE5gw6aoP2DpGgYv6MaYedjDm3lMeWDdYnxj7MubCNoOnN9DD6k7NQqbMD3G7kd9wDclVwemQhpDqQ'}\n"
      ]
     }
    ],
@@ -78,8 +79,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "innovative-tuning",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fxc = funcx.FuncXClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "qualified-treatment",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "refined-baseline",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fdfbbe34-2499-428f-a541-227ca935fb08\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hello_world():\n",
+    "    import time\n",
+    "    time.sleep(100)\n",
+    "    raise NotImplementedError\n",
+    "    return \"Hello World!\"\n",
+    "\n",
+    "func_uuid = fxc.register_function(hello_world)\n",
+    "print(func_uuid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "congressional-pizza",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24f47162-52bf-47c6-ad10-37e47c55a0d2\n"
+     ]
+    }
+   ],
+   "source": [
+    "tutorial_endpoint = '4b116d3c-1703-4f8f-9f6f-39921e5864df' # Public tutorial endpoint\n",
+    "jetstream_endpoint = \"a592279e-45cc-427a-a679-6fd308aa9661\"\n",
+    "res = fxc.run(endpoint_id=jetstream_endpoint, function_id=func_uuid)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "civilian-internet",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    x = fxc.get_result(res)\n",
+    "    print(x)\n",
+    "except NotImplementedError:\n",
+    "    print(\"here\")\n",
+    "except Exception:\n",
+    "    print(\"there\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "necessary-engine",
    "metadata": {},
    "outputs": [],
    "source": []
